fixedthe details pages add gapping

--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -24,7 +24,7 @@
   margin-right: 5px;
   color: white;
 }
-
-.add-img{
+.add-img {
   max-width: 250px;
+  margin-bottom: 2rem;
 }
